给权限增加descrption和group_name字段
